docs: edit account handler
